homelab/apps/media/base/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:4.6.5
        ports:
        - containerPort: 8080
        lifecycle:
          postStart:
            exec:
              command: ["cp", "/config/qBittorrent/default/tobeignore.yaml", "/config/qBittorrent/qBittorrent.conf"]
        volumeMounts:
        - name: config
          mountPath: /config/qBittorrent/default
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        configMap:
          name: qbittorrent-config
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
