homelab/apps/media/base/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
  - port: 8080
